# ISAAC_LAB_ROBOT_TRAINING

./: .gitignore  LICENSE  README.md  pyproject.toml  robot_demo.py  velocity_env_cfg.py
controll_scripts/: __init__.py
controll_scripts/configs/: __init__.py  base.py  so_arm_101.py
controll_scripts/controllers/: factory.py  osc_controller.py
controll_scripts/input_devices/: __init__.py  leader_arm.py  se3_leader_arm.py
controll_scripts/so_arm_101/: __init__.py  robot_description.yaml
mimic_envs/: README.md  SETUP.md  TASK_INSTRUCTIONS.md  __init__.py  so_arm_stack_joint_mimic_env_cfg.py
projects/: README.md  __init__.py
projects/mimic_envs/: README.md  TASK_INSTRUCTIONS.md  so_arm_stack_camera_mimic_env_cfg.py  so_arm_stack_joint_mimic_env.py  so_arm_stack_joint_mimic_env_cfg.py  teleop_device_factory_modified.py
projects/rl_direct_hand_locomotion/: README.md
projects/rl_manager_a1_navigation/: README.md
projects/so_arm_mimic/: README.md  __init__.py  setup.py
rl_direct_hand_locomotion/: README.md
rl_manager_a1_navigation/: README.md
scripts/: 02_keyboard_control.py  03_domino_fpv.py  04_trajectory_record.py  06_teleoperate_demo.py  README.md
standalone_scripts/: 01_basic_auto_drive.py  05_robot_demo.py  06_teleoperate_demo.py  07_lerobot_teleoperate.py  README.md  collect_mimic_demo.py  mimic_consolidated_demo.py  record_demos_leader_arm.py  run_mimic_demo.py  teleop_processors.py
tools/: 06_teleoperate.py  README.md  __init__.py  delete_episodes.py  record_demos.py  regenerate_demos.py  replay_demos.py  view_port.py
(+80 files in other folders)
