[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "controll_scripts"
version = "0.1.0"
description = "Robot Control Library for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["controll_scripts*"]
