[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "controll_scripts"
version = "0.1.0"
description = "Robot Control Library for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["tools"]
include = ["controll_scripts*"]

[tool.setuptools.package-data]
controll_scripts = [
    "so_arm_101/*.usd",
    "so_arm_101/*.yaml",
    "so_arm_101/**/*.urdf",
    "so_arm_101/**/*",
]
